[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
home = "0.5.5"
zip-extensions = "0.6.2"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
