[package]
name = "@@PLUGIN_NAME@@"
version = "@@PLUGIN_VERSION@@"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata]
wasi = false

[dependencies]
extism-pdk = "1.4.1"
serde = "1.0.219"
serde_json = "1.0.141"
otoroshi_rust_types = "1.0.1"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
