[package]
name = "@@PLUGIN_NAME@@"
version = "@@PLUGIN_VERSION@@"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata]
wasi = false

[dependencies]
extism-pdk = "1.0.1"
serde = "1.0.152"
serde_json = "1.0.91"
otoroshi_rust_types = "0.0.5"

[lib]
crate_type = ["cdylib"]
path = "src/lib.rs"
